Minor improvements - added border to prevent "hover jumping"
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@8423 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/portal-web/docroot/html/themes/_styled/css/portlet.css
+++ b/portal-web/docroot/html/themes/_styled/css/portlet.css
@@ -173,6 +173,7 @@
 
 .portlet-section-body td {
 	background: #DCDCDC;
+	border-bottom: 1px solid #BFBFBF;
 	border-top: 1px solid #BFBFBF;
 	padding: 0.3em 1em;
 }
@@ -186,6 +187,7 @@
 
 .portlet-section-alternate td {
 	background: #fff;
+	border-bottom: 1px solid #fff;
 	border-top: 1px solid #BFBFBF;
 	padding: 0.3em 1em;
 }
